@@ -1,6 +1,8 @@
 DIST guitarix2-0.27.1.tar.bz2 20608874 SHA256 9bfb26bd6615aaece69755c2a7082a4eb6ff86d503f3dbcc8ddbebc0be579139 SHA512 50f3fd14a1b5574c78d9e9e1c28a69510bd58bc701cdf2bfdfc51baa8cff450802bce4b0410140bac71fcacdb68ad04cb771a2f10bf679448bf4db1faf07c61b WHIRLPOOL 48533c76d94ad4e691f1d7b2cf2f663534ba3d93fdb662c60b663956c016e872f1c158ee3d5cb718b2045fe8fb30610578ad05ff29fc37d34fd6cd4e2018610c
+DIST guitarix2-0.28.1.tar.bz2 20152396 SHA256 3662e4582d96297474a7d5ece6dccd2c3c6f267b5e116bf19857dc67989af5ca SHA512 0113510a79f190e6ad9f0e9f882cf0951551e0594ae6074cf0ba66534cef96edd9ef7d99ebfd146a17edfe09d9bfbef56b7b9942548692aba0a0f078a8011f62 WHIRLPOOL c7deea224f65133f503d431aefa56e13c6997b5eb8d60c1588b72e62cd3ce2c0eb000b7d70a647370a311687ac86d1d421665452facf3f906d1b841c77adc1b9
 EBUILD guitarix2-0.27.1-r1.ebuild 2707 SHA256 230539de4ba351b7a69a53565a07a8a4c3a2e94e8e96fea87127509d0390396f SHA512 a7f52b8aab7f14655a995427115252a9939d3cfcba3e1e3df68765267b90dd7875ecea0a275df73cec82cfd778ddf7e7dabb554b809ce603386e32324c15d0cb WHIRLPOOL 5740ff8fda6a57842a1038bc3e18e64eabca4731c1fe2027993a24bffd0bcfe3eb32cc5f3015d0b5f09da4db9fe86060f4781768a57d27c88f497708034bf82e
 EBUILD guitarix2-0.27.1.ebuild 2666 SHA256 4ca693c0d893be2b29e6de6369dda78a7c05dc97aea828cb0a9951dbfd7220be SHA512 3355f72d61dcc23d3032197d3a732836d6f5643a59cd43d962de85f5b3ad8b618e3fcbb2f6acf6355878e907c309c54dbe37e47a00aa2d7590b5bfa224806182 WHIRLPOOL dff6cfa7c4c19eca764c9c24c2391305c22cd86a58a69ad410ef34bebffd522c23b20f180fffa98744e0e100eb6ab9db908d840836dbf0581bb5cb0a0df461bd
-EBUILD guitarix2-9999.ebuild 2779 SHA256 4d6982f75535fe91d284c77990a080088984646de74786f3a10cbc5ed8c1b256 SHA512 3ef1037ad7b2739d0fdafef3acc260fbb8a576377f9046167e6367f231dff70bd6c529c67d1b9e315326372c28a7700b0e783a564291cb7cb7b2368429d548b0 WHIRLPOOL dd5615530b1b91a035e663ba2aa181502230c43ed46c601bc5191bafa581dfea50af50d0375e3abb2d5cc98a514506f896f24f23a11b1e09c54a66108a0a691b
-MISC ChangeLog 4084 SHA256 d67c6424ae26c781e39bf8eb8d8fc542df82b0b4e5de6ea5067ff5ac3594e8a3 SHA512 2f7b368f40a9981436a9c270b4486f7fc01e5ceb53e48c13cf1ba99e7a2ed81172f0e72e037e86e619231c6557149704b0ff5212ea0e3119cbf5d8566010ad3c WHIRLPOOL 9e58d09b1fbbcb8a241c80205417e9af1abdc781a624759b9370ad482030ac0962640c060a0ce01a8c8b79ac3cb67a1b2eaf22b56abbf1889e1d1285a923cd0c
+EBUILD guitarix2-0.28.1.ebuild 2629 SHA256 e95ff80794ca4d3c3665eaf3301c3a0f676ce3676162958d9973a0c72ac993a1 SHA512 ae9665de66d1b4d85d54fef7e14d6fb3a9f5938df7ee7f0180d1a1a94da1440b7d33a89a3b651c519c80b1b83ce984ee43c06efeaa5d78f547929791fa33cbb9 WHIRLPOOL 13aa255ba93984f91d1df13b94ac6035c4fc2880300b5a0885864d22823aa66d54f5c44a86a219599c4628556ecc24c580afbde3c42f28f218139038bc48823c
+EBUILD guitarix2-9999.ebuild 2623 SHA256 26acd9095f319f5b43e2c85dbce914e2409c4b906cdcfdbcc79ef9907b26f54d SHA512 a7650d6d50bc4fbac3aced7bca2057552c9627ae800b12d74ae3ddd7e64ad2f02561052658e3139e1554309ef9b84d6347d0d19d27f6092aef9129bd75b8fa8d WHIRLPOOL 7e2af1629f87d9bba4ee411d06c198de6fddfc5cb1e69d26c801b48ed229289d6f2187ac2a6879867ae23f5c2c0bf5e607dec776a7ef71d28df1de010c05be93
+MISC ChangeLog 4299 SHA256 a1727e3209b19ad8bbd80ea1f52bead303c70e0173a97d66447a23b6dd276df1 SHA512 b1f382270ccf4905e3e18319069325a0e299d61ecbbf8f706335785758a26462229c3ea9fca4d45aa1a2646c98e5241a11a4facf3568159ba18ab41518a40e23 WHIRLPOOL fc91d91f3e649a3d280e5c725065cc100d17b91ded45956b14f6dfffddc22cb0dbff35b94fed2f4927dac4b7cbf595253702a648c57f89af1c3d69eefe6eff63
 MISC metadata.xml 642 SHA256 fef3af7ca682c1fc74f610c6afbdb908af976102a852d8bbea3616c361f2cf1d SHA512 783c6b25b865825ce1ded5d93202f5b0470da1255c33540f52e9b82d4c7d0f3eb76f643d5f06a35682ba7cd3f5dd6eb07798d8a3a247d9cc57cdc6acc9b96739 WHIRLPOOL c83234ce05b42242d307decb6dcb866ea5b02294b5da3e4901b3da47adc210f7dc50c8100d846b9b5c8a89fcaacec4f598a765f3f952fc433818d37c9beb7e1c
