@@ -7,17 +7,17 @@ EAPI="5"
 # We cannot use waf-utils eclass because the waf binary is old!
 # Version is 1.5.18. Written April 09 2013
 PYTHON_COMPAT=( python2_7 )
-inherit base eutils git-2 multilib multiprocessing python-any-r1
+inherit base eutils multilib multiprocessing python-any-r1
 
 DESCRIPTION="A simple Linux Guitar Amplifier for jack with one input and two outputs"
-EGIT_REPO_URI="git://git.code.sf.net/p/guitarix/git/"
+SRC_URI="mirror://sourceforge/guitarix/guitarix/${P}.tar.bz2"
 HOMEPAGE="http://guitarix.sourceforge.net/"
 
 RESTRICT="mirror"
 
 SLOT="0"
 LICENSE="GPL-2"
-KEYWORDS=""
+KEYWORDS="~amd64 ~x86"
 
 IUSE="avahi +capture custom-cflags +convolver debug faust ladspa lv2 +meterbridge nls"
 
@@ -45,8 +45,7 @@ DEPEND="${RDEPEND}
 	virtual/pkgconfig
 	nls? ( dev-util/intltool )"
 
-EGIT_SOURCEDIR="${S}"
-S="${S}/trunk"
+S="${WORKDIR}/guitarix-${PV}"
 
 DOCS=( changelog README )
 
