@@ -2,6 +2,13 @@
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*guitarix2-0.28.1 (21 Jul 2013)
+
+  21 Jul 2013; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
+  +guitarix2-0.28.1.ebuild, guitarix2-9999.ebuild:
+  Version bump.
+  Use the usex function to increase readability.
+
 *guitarix2-0.27.1-r1 (13 Jul 2013)
 
   13 Jul 2013; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
